--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -5,6 +5,11 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   security-checks:
     runs-on: ubuntu-latest
