--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -22,21 +22,21 @@ jobs:
         terraform_version: "1.5.7"
 
     - name: Terraform Format Check
-      working-directory: infrastructure/bootstrap
+      working-directory: infrastructure/website
       run: terraform fmt -check -recursive
 
     - name: Terraform Init
-      working-directory: infrastructure/bootstrap
+      working-directory: infrastructure/website
       run: terraform init -backend=false
 
     - name: Terraform Validate
-      working-directory: infrastructure/bootstrap
+      working-directory: infrastructure/website
       run: terraform validate
 
     - name: Run tfsec
       uses: aquasecurity/tfsec-action@v1.0.3
       with:
-        working_directory: infrastructure/bootstrap
+        working_directory: infrastructure/website
 
     - name: Setup Node.js
       uses: actions/setup-node@v4
