--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ main ]  
   workflow_dispatch:    
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -27,12 +28,11 @@ jobs:
     - name: Build
       run: npm run build
     
-    - name: Configure AWS credentials
+    - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-2  # Match your Terraform config
+        role-to-assume: ${{ secrets.DEPLOY_ROLE_ARN }}
+        aws-region: us-east-2
     
     - name: Deploy to S3
       run: |
