feat: total site refresh. (#1)
* refactor repo for nextjs and terraform infra.

* bootstrap terraform.

* provision website infra.

* remove old terraform folder.

* complete v0.1 of website.

* add users for ci/cd.

* add infra for website.

* update next config for building.

* update gitignore.

* add website deploy.

* add terraform ci/cd.

* pr workflow.

* release please workflow.

* fix issue with security scanning.

* fix issue with security scanning.

* numerous fixes to workflows.

* feat(infra): enhance AWS infrastructure security

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,55 @@
-env
-.env
-new.html
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Next.js (in website directory)
+website/.next/
+website/out/
+website/build/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+node_modules/
+
+# Production
+build/
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+crash.log
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+.terraformrc.json
+terraform.tfvars
+*.tfvars
+
+# IDEs and editors
+.vscode/
+.idea/
+*.swp
+*.swo
+*.swn
+*.bak
+*.tmp
+*.orig
+*.rej
