--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -24,10 +24,10 @@ jobs:
     - uses: hashicorp/setup-terraform@v2
     
     - name: Terraform Init
-      run: cd terraform && terraform init
+      run: cd infrastructure/website && terraform init
     
     - name: Terraform Plan
       run: cd infrastructure/website && terraform plan
     
     - name: Terraform Apply
-      run: cd terraform && terraform apply -auto-approve
+      run: cd infrastructure/website && terraform apply -auto-approve
