--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,5 +15,5 @@ jobs:
     steps:
       - uses: google-github-actions/release-please-action@v4
         with:
-          release-type: node
+          release-type: simple
           token: ${{ secrets.RELEASE_PLEASE_GH_TOKEN }}
