--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -5,6 +5,11 @@ on:
     branches: [ master ]  
   workflow_dispatch:    
 
+# Add permissions block
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
