--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -3,7 +3,7 @@ name: Website Deployment
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       - 'website/**'
   pull_request:
@@ -13,7 +13,7 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     
     steps:
       - uses: actions/checkout@v4
