--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -10,6 +10,10 @@ on:
     paths:
       - 'website/**'
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -36,8 +40,7 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::779846805358:role/github-deployer-role
           aws-region: us-east-2
 
       - name: Deploy to S3
